# DashboardAirbnb

./: README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/dashboardairbnb/: manage.py
backend/dashboardairbnb/core/: data.py  models.py  urls.py  views.py
backend/dashboardairbnb/core/management/commands/: import_data.py
backend/dashboardairbnb/core/migrations/: 0001_initial.py  0003_listing_delete_property.py  0004_rename_calculated_host_listings_count_host_listings_count.py  0005_alter_listing_host_id.py
backend/dashboardairbnb/dashboardairbnb/: settings.py  urls.py  wsgi.py
dashboardairbnb/core/: admin.py  models.py  views.py
dashboardairbnb/core/csv/: host_df.csv
dashboardairbnb/core/migrations/: 0002_host_calculated_host_listings_count.py
dashboardairbnb/dashboardairbnb/: asgi.py  settings.py
frontend/: README.md  package-lock.json
frontend/src/: main.tsx
frontend/src/Dashboard/: Dashboard.css  Dashboard.tsx  Data.tsx  Graphs.tsx  HostsTable.tsx  Models.tsx  Requests.tsx
