[project]
name = "dashboardairbnb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.13",
    "django-cors-headers>=4.9.0",
    "django-stubs>=6.0.3",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "pandas>=3.0.2",
]
